add command for date search and servicecoordinator to handle double repository issue